2008-10-31  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-check-button.c (hildon_check_button_new):
	Align the contents of the check button to the left.

2008-10-30  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_scroll_to),
	(hildon_pannable_area_jump_to),
	(hildon_pannable_area_scroll_to_child),
	(hildon_pannable_area_jump_to_child): Replace the mapped
	precondition of these functions with the realized, it is the
	correct state of the widget in this case. Changed the
	documentation according to this modification.

2008-10-30  Alejandro G. Castro	 <alex@igalia.com>

	Added a new EXTRA_CFLAGS option to add the deprecated define to
	the compilation command. This way we can avoid using the define in
	the documentation compilation.

	* configure.ac: Defined EXTRA_CFLAGS.

	* examples/Makefile.am:
	* src/Makefile.am:
	* tests/Makefile.am: Included EXTRA_CFLAGS in the compilation.

2008-10-30  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-picker-dialog.c:
	Defined a utility macro with the desired touch selector height
	Removed currently unused separator, and title_label variables from
	private structure.
	(hildon_picker_dialog_init): Removed code related to the creation
	of unused private variables title_label and separator.
	(_hildon_picker_dialog_set_selector): Added gtk_widget_set_size_request
	to ensure correct visualization of the touch selector inside the dialog.
	* src/hildon-touch-selector.c
	(hildon_touch_selector_init): Removed a gtk_widget_set_size_request to
	ensure a concrete height of the widget.

2008-10-30  Claudio Saavedra  <csaavedra@igalia.com>

	* src/Makefile.am:
	* tests/Makefile.am:

	Remove spurious whitespaces.

2008-10-30  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-code-dialog.c: (hildon_code_dialog_init): Fix a
	compilation warning after the cancel button removal.

2008-10-30  Alejandro G. Castro	 <alex@igalia.com>
